--- a/src/app/products/components/landing/landing.component.html
+++ b/src/app/products/components/landing/landing.component.html
@@ -245,7 +245,7 @@
 <!-- Hero-Page| END -->
 
 <!-- start of our-fav -->
-<div class="slider" id="slider">
+<div class="slider" id="slider" data-aos="fade-up">
   <h1 class="text-center fs-2 bText ">OUR FAVORITES</h1>
   <p class="text-center">Our weekly picks right here.</p>
   <div class="slide" id="slide">
