--- a/src/app/products/components/category/category.component.html
+++ b/src/app/products/components/category/category.component.html
@@ -1,6 +1,6 @@
 <section>
   <div class="charisHome">
-    <h2 class="gText text-uppercase fw-bolder ms-3 mb-4">Chairs</h2>
+    <h2 class="gText text-uppercase fw-bolder ms-3 mb-4">{{ category }}</h2>
   </div>
 </section>
 
@@ -9,11 +9,11 @@
     <div class="row">
       <div
         class="col-sm-6 col-md-4 col-lg-3"
-        *ngFor="let product of chairsProducts"
+        *ngFor="let product of products"
       >
-        <div class="chairCard" [routerLink]="['/details', product.id]">
+        <div class="chairCard">
           <div class="img">
-            <img [src]="product.imageUrl" alt="" class="chairImg" />
+            <img [src]="product.imageUrl" [alt]="product.name" class="chairImg" [routerLink]="['/details', product.id]"/>
           </div>
           <div class="info">
             <p class="pstatus">{{ product.status }}</p>
@@ -22,13 +22,12 @@
           <div class="price">
             <span>{{ product.price }}$</span>
             <div class="view">
-              <p class="gText hover">ADD TO CART</p>
+              <p class="gText hover" (click)="addToCart(product)">ADD TO CART</p>
               <p class="gText hover">QUICKVIEW</p>
-              <i class="fa-regular fa-heart"></i>
+              <i class="fa-regular fa-heart" (click)="addToWishlist($event, product)"></i>
             </div>
           </div>
         </div>
-        
       </div>
     </div>
   </div>
