--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -4,7 +4,7 @@
   <div class="hero-navbar" data-aos="fade-down" data-aos-duration="1500">
     <nav class="navbar navbar-expand-lg bg-white">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#hero-page"
+        <a class="navbar-brand" href="#" routerLink="/landing"
           ><img src="/assets/IMGS/logo-blue.svg" alt="Logo" class=""
         /></a>
         <button
@@ -21,32 +21,46 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
             <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#"routerLink="/sofas"
+              <a class="nav-link hover" [routerLink]="['/category', 'Chairs']"
+                >Chairs</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link hover" [routerLink]="['/category', 'Tables']"
+                >Tables</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link hover" [routerLink]="['/category', 'Beds']"
+                >Beds</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link hover" [routerLink]="['/category', 'Storage']"
+                >Storage</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link hover" [routerLink]="['/category', 'Lighting']"
+                >Lighting</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link hover" [routerLink]="['/category', 'sofas']"
                 >Sofas</a
               >
             </li>
             <li class="nav-item">
-              <a class="nav-link hover" href="#"routerLink='/chairs'>Chairs</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link hover" href="#"routerLink='/tables'>Tables</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link hover" href="#"routerLink='/beds'>Beds</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link hover" routerLink="/storage" >Storage</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link hover" href="#"routerLink='/lighting'>Lighting</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link hover sale" href="#"routerLink='/sale'>Sale</a>
+              <a
+                class="nav-link hover sale"
+                [routerLink]="['/category', 'Sale']"
+                >Sale</a
+              >
             </li>
           </ul>
         </div>
         <div class="navLogin">
-          <div class="cart">
+          <div class="cart" routerLink="/cart">
             <i class="fa-sharp fa-solid fa-cart-shopping"></i>
             <span class="shopping-bag-numbers">0</span>
           </div>
