--- a/src/app/products/components/cart/cart.component.css
+++ b/src/app/products/components/cart/cart.component.css
@@ -1,375 +1,316 @@
 /* ViewCart-Page |START */
 /* CartProgress-start */
 .cartProgress {
-    padding: 30px 15px 50px;
-    margin-left: 16px;
-
+  padding: 30px 15px 50px;
+  margin-left: 16px;
 }
 
 .cartProgress h1 {
-    font-size: 38px;
-    font-weight: bold;
-    margin: 0px 0px 50px;
+  font-size: 38px;
+  font-weight: bold;
+  margin: 0px 0px 50px;
 }
 
 .progress-title svg {
-    width: 16px;
-    opacity: 0.3;
-    margin-right: 13px;
+  width: 16px;
+  opacity: 0.3;
+  margin-right: 13px;
 }
 
 .progress-title a {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 14px;
-    font-weight: 600;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 14px;
+  font-weight: 600;
 }
 
 .progress-title p {
-    font-size: 10px;
-    font-weight: 300;
-    text-transform: uppercase;
-    margin-top: 7px;
+  font-size: 10px;
+  font-weight: 300;
+  text-transform: uppercase;
+  margin-top: 7px;
 }
 
 .progress-hight {
-    height: 3px;
+  height: 3px;
 }
 
 .progress-color {
-    background-color: #ADB5BD;
-    width: 33%;
-
+  background-color: #adb5bd;
+  width: 33%;
 }
 
 /* CartProgress-end */
 /* Free Shipping-start */
 .freeShiping h4 {
-    font-size: 14px;
-    font-weight: 600;
-    text-align: center;
-    margin-top: 35px;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+  margin-top: 35px;
 }
 
 .shiping-shape {
-    height: 5px;
-    background-color: #212529;
-    border-radius: 5px;
-    margin: 0px 0px 25px;
-
+  height: 5px;
+  background-color: #212529;
+  border-radius: 5px;
+  margin: 0px 0px 25px;
 }
 
 .product-title {
-    background-color: #F9FAFB;
-    padding: 20px;
-    text-transform: uppercase;
+  background-color: #f9fafb;
+  padding: 20px;
+  text-transform: uppercase;
 }
 
 .product-title h6 {
-    font-size: 12px;
-    font-weight: 600;
+  font-size: 12px;
+  font-weight: 600;
 }
 
 .product-content {
-    border-bottom: 1px solid #d9ddde;
-    padding: 20px 20px 0px;
+  border-bottom: 1px solid #d9ddde;
+  padding: 20px 20px 0px;
 }
 
 .product-content img {
-    width: 100%;
+  width: 100%;
 }
 
 .product-content h2 {
-    font-size: 18px;
-    font-weight: 300;
-    padding-bottom: 5px;
+  font-size: 18px;
+  font-weight: 300;
+  padding-bottom: 5px;
 }
 
 .product-remove {
-    display: flex;
-    align-items: center;
+  display: flex;
+  align-items: center;
 }
 
 .product-content svg {
-    width: 10px;
-    opacity: 0.3;
-    display: none;
-
+  width: 10px;
+  opacity: 0.3;
+  display: none;
 }
 
 .product-content p {
-    font-size: 11px;
-    color: #484F56;
-    opacity: 0.3;
-    margin: 0px;
-
+  font-size: 11px;
+  color: #484f56;
+  opacity: 0.3;
+  margin: 0px;
 }
 
 .product-content p:hover {
-    cursor: pointer;
-    opacity: 1;
-    transform: translateX(15%);
-    transition: 0.5s;
-
+  cursor: pointer;
+  opacity: 1;
+  transform: translateX(15%);
+  transition: 0.5s;
 }
 
 .product-remove:hover svg {
-    display: block;
+  display: block;
 }
 
 .product-content h3 {
-    font-size: 14px;
-    font-weight: 300;
-    padding: 20px 20px 20px 0px;
+  font-size: 14px;
+  font-weight: 300;
+  padding: 20px 20px 20px 0px;
 }
 
 .product-count {
-    border: 1px solid #e7eaeb;
-    padding: 5px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin-left: 20px;
+  border: 1px solid #e7eaeb;
+  padding: 5px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 20px;
 }
 
 .product-count div {
-    width: 100%;
-    display: flex;
-    justify-content: space-evenly;
-    align-items: center;
-    font-size: 12px;
-    font-weight: 900;
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 12px;
+  font-weight: 900;
 }
 
 .product-count .numbers {
-    border-left: 2px solid #e7eaeb;
-    border-right: 2px solid #e7eaeb;
-    padding: 0px 10px;
+  border-left: 2px solid #e7eaeb;
+  border-right: 2px solid #e7eaeb;
+  padding: 0px 10px;
 }
-
 
 .product-content h4 {
-    font-size: 14px;
-    font-weight: bold;
-    padding: 20px;
-    margin: 0px;
+  font-size: 14px;
+  font-weight: bold;
+  padding: 20px;
+  margin: 0px;
 }
 
-
 .coupon-code {
-    margin: 50px 0px 40px;
+  margin: 50px 0px 40px;
 }
 
 .coupon-code input {
-    border: 1px solid #ADB5BD;
-    padding: 10px 13px;
-    border-radius: 5px;
-
+  border: 1px solid #adb5bd;
+  padding: 10px 13px;
+  border-radius: 5px;
 }
 
 .coupon-code input::placeholder {
-    font-size: 14px;
-    color: #ADB5BD;
-
+  font-size: 14px;
+  color: #adb5bd;
 }
 
 .coupon-code input:hover {
-    border-color: #212529;
+  border-color: #212529;
 }
 
 .coupon-code button {
-    border: none;
-    background-color: #EAEDF0;
-    padding: 13px 20px;
-    margin-left: 5px;
-    border-radius: 5px;
-    font-size: 13px;
-    font-weight: 600;
+  border: none;
+  background-color: #eaedf0;
+  padding: 13px 20px;
+  margin-left: 5px;
+  border-radius: 5px;
+  font-size: 13px;
+  font-weight: 600;
 }
 
-
 .coupon-code button:hover {
-    background-color: #DFE3E7;
+  background-color: #dfe3e7;
 }
 
 /* Free Shipping-end */
 /* Interested In-start */
-.interes-titles {
-    display: flex;
-}
-
-.interes-titles h3 {
-    width: 50%;
+.interested-in {
+  padding: 30px 0;
 }
 
 .interested-in h3 {
-    font-size: 14px;
-    font-weight: 900;
-    color: #484F56;
-    text-transform: uppercase;
-    margin-bottom: 22px;
+  font-size: 14px;
+  font-weight: 900;
+  color: #484f56;
+  text-transform: uppercase;
+  margin-bottom: 22px;
 }
 
-.product-option img {
-    width: 100%;
-    margin: 50px 0px 50px;
+.chairCard {
+  transition: 0.8s ease-in-out;
+  cursor: pointer;
+  margin-bottom: 30px;
 }
 
-.product-option p {
-    font-size: 10px;
-    color: #484F56;
-    text-transform: uppercase;
-    font-weight: 900;
-    opacity: 0.5;
-
+.img {
+  display: flex;
+  align-items: center;
+  height: 300px;
+  overflow: hidden;
 }
 
-.product-name {
-    text-decoration: none;
-    font-size: 18px;
-    margin-bottom: 15px;
-    color: #000;
+.chairImg {
+  max-width: 70%;
+  transition: transform 750ms;
 }
 
-.product-option h6 {
-    font-size: 14px;
-    font-weight: 900;
-    color: #484F56;
-    margin-top: 35px;
+.chairCard:hover .chairImg {
+  transform: scale(1.1);
 }
 
-.product-option:hover h6 {
-    cursor: pointer;
-    opacity: 0;
-
+.info {
+  height: 50px;
+  padding: 10px 0;
 }
 
-.product-details {
-    width: 100%;
-    background-color: #ffffff;
-    opacity: 0;
-    transition: 0.6s;
+.pname {
+  font-weight: bold;
+  margin-bottom: 5px;
 }
 
-
-.product-details a {
-    text-decoration: none;
-    font-size: 13px;
-    font-weight: 600;
-    color: #484F56;
-    padding: 0px 5px;
-    margin: 0px;
-    position: relative;
-
+.price {
+  color: #2c2c2c;
+  font-weight: bold;
+  height: 20px;
+  overflow: hidden;
+  position: relative;
+  transition: 0.5s;
 }
 
-.product-details a::after {
-    content: " ";
-    width: 100%;
-    border: 1px solid #484F56;
-    position: absolute;
-    top: 100%;
-    left: 0px;
-
+.price span {
+  position: absolute;
+  top: -2px;
+  transition: 0.5s;
 }
 
-.product-details a:hover::after {
-    animation-name: line;
-    animation-duration: 1s;
-    animation-iteration-count: infinite;
+.view {
+  font-size: 12px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  position: relative;
+  bottom: -21px;
+  transition: 0.5s;
+  width: 70%;
+  align-self: flex-start;
 }
 
-
-@keyframes line {
-    10% {
-        opacity: 0;
-        width: 0px;
-    }
-
-    20% {
-        opacity: 1;
-        width: 50%;
-    }
-
-    30% {
-        opacity: 1;
-        width: 100%;
-    }
-
+.chairCard:hover .view {
+  bottom: -2px;
 }
 
-.product-details svg {
-    width: 15px;
-    opacity: 0.6;
-    display: block;
-    margin: 10px 0px 50px;
+.chairCard:hover .price span {
+  top: -21px;
 }
-
-
-
-.product-option:hover .product-details {
-    cursor: pointer;
-    transform: translateY(-85%);
-    opacity: 1;
-}
-
 
 .cart-container {
-    padding-left: 0px;
-    margin-bottom: 40px;
+  margin-top: 100px;
+
 }
 
 .cart-table {
-    border: 1px solid #d9ddde;
-    width: 100%;
+  border: 1px solid #d9ddde;
+  width: 100%;
 }
 
 .card-data th {
-    font-size: 12px;
-    padding: 15px 25px;
-    color: #484F56;
-    background-color: #F9FAFB;
-    text-transform: uppercase;
-    font-weight: 600;
-
+  font-size: 12px;
+  padding: 15px 25px;
+  color: #484f56;
+  background-color: #f9fafb;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .card-data td {
-    font-size: 14px;
-    padding: 15px 25px;
-    color: #484F56;
-    text-transform: uppercase;
-    font-weight: 600;
-}
-
-tbody, td, tfoot, th, thead, tr {
-    border-width: 1px;
-}
-
-
-.card-data .sub {
-    font-weight: 300;
+  font-size: 14px;
+  padding: 15px 25px;
+  color: #484f56;
+  text-transform: uppercase;
+  font-weight: 600;
 }
 
 .cart-container button {
-    width: 100%;
-    padding: 20px;
-    margin: 40px 0px 50px;
-    border: none;
-    background-color: #212529;
+  width: 100%;
+  padding: 20px;
+  margin: 20px 0;
+  border: none;
+  background-color: #212529;
 }
 
 .cart-container button a {
-    text-decoration: none;
-    text-transform: uppercase;
-    font-size: 13px;
-    font-weight: 600;
-    color: #fff;
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 13px;
+  font-weight: 600;
+  color: #fff;
 }
 
 .cart-container button:hover {
-background-color: #000;
+  background-color: #000;
 }
 
 /* Interested In-end */
 /* ViewCart-Page |END */
+
+
+
