--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -62,9 +62,9 @@
         <div class="navLogin">
           <div class="cart" routerLink="/cart">
             <i class="fa-sharp fa-solid fa-cart-shopping"></i>
-            <span class="shopping-bag-numbers">0</span>
+            <span class="shopping-bag-numbers">{{cartItemCount}}</span>
           </div>
-          <i class="fa-sharp fa-solid fa-user"></i>
+          <i class="fa-sharp fa-solid fa-user" routerLink="/login" ></i>
         </div>
       </div>
     </nav>
