--- a/src/app/products/components/cart/cart.component.html
+++ b/src/app/products/components/cart/cart.component.html
@@ -95,10 +95,10 @@
             <p>REMOVE</p>
           </div>
         </div>
-        <div class="col-lg-3">
+        <div class="col-lg-3 count">
           <h3>£{{ item.price }}</h3>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 count">
           <div class="product-count">
             <div>
               <span
@@ -115,7 +115,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg-1">
+        <div class="col-lg-1 count">
           <h4>£{{ item.price * item.quantity }}</h4>
         </div>
       </div>
@@ -127,8 +127,8 @@
             placeholder="Coupon Code"
             [(ngModel)]="couponCode"
           />
-          <button type="submit">Apply Coupon</button>
         </form>
+        <button type="submit">Apply Coupon</button>
       </div>
     </div>
   </div>
