--- a/src/app/products/components/cart/cart.component.html
+++ b/src/app/products/components/cart/cart.component.html
@@ -181,7 +181,7 @@
               </tr>
             </tbody>
           </table>
-          <button><a href="#">Proceed to checkout</a></button>
+          <button><a href="#" [routerLink]="['/checkout']">Proceed to checkout</a></button>
         </div>
       </div>
     </div>
