--- a/src/styles.css
+++ b/src/styles.css
@@ -68,3 +68,7 @@ body {
   pointer-events: none;
   z-index: 99999999; /* so that it stays on top of all other elements */
 }
+.error-message {
+  color: red;
+  font-size: 0.8em;
+}
