--- a/src/app/auth/components/auth/auth.component.css
+++ b/src/app/auth/components/auth/auth.component.css
@@ -7,6 +7,7 @@
   font-size: 15px;
   font-weight: 500;
   color: #ffffff;
+  position: relative;
 }
 .form {
   display: flex;
@@ -158,4 +159,32 @@
   position: absolute;
   top: 80px;
   align-self: center;
+}
+aside {
+  height: 100%;
+  position: absolute;
+  background-color: #ffffff;
+  box-shadow: 10px 10px 16px 0px black;
+  right: -100%;
+  top: 0;
+  width: 220px;
+  padding: 33px;
+  z-index: 999;
+  text-align: center;
+}
+.user-info {
+  display: flex;
+  align-items: center;
+}
+.user-info p {
+  flex: 1;
+  margin: 0 0 0 21px;
+}
+.logout-button {
+  width: 100%;
+  position: absolute;
+  bottom: 35px;
+  left: 0;
+  padding: 10px;
+  background-color: inherit;
 }
