--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -51,11 +51,7 @@
               >
             </li>
             <li class="nav-item">
-              <a
-                class="nav-link hover sale"
-                [routerLink]="['/category', 'Sale']"
-                >Sale</a
-              >
+              <a class="nav-link hover sale" [routerLink]="['/sales']">Sale</a>
             </li>
           </ul>
         </div>
