--- a/src/app/dashboard/components/manage-orders/dashboard.component.html
+++ b/src/app/dashboard/components/manage-orders/dashboard.component.html
@@ -3,7 +3,7 @@
     <div class="nav nav-tabs" id="myTab" role="tablist">
       <li class="nav-item" role="presentation">
         <button
-          class="nav-link active notSlected"
+          class="nav-link active notSelected"
           id="add-tab"
           data-bs-toggle="tab"
           data-bs-target="#add"
@@ -17,11 +17,13 @@
       </li>
     </div>
   </div>
+
   <div class="d-flex justify-content-around">
     <button class="adminButton my-5" (click)="addNewProduct()">
       Add New Product
     </button>
   </div>
+
   <div class="tab-content" id="myTabContent">
     <!-- Edit/Add Product Tab -->
     <div
@@ -33,8 +35,7 @@
       <div class="container adminPage">
         <div *ngFor="let product of products" class="row orderItem">
           <div
-            class="col-2 p-4 d-flex justify-content-center"
-            [attr.id]="product.id"
+            class="col-lg-2 col-md-4 col-sm-6 p-4 d-flex justify-content-center"
           >
             <img
               [src]="product.imageUrl"
@@ -42,21 +43,21 @@
               class="orderImg img-fluid"
             />
           </div>
-          <div class="col-7 d-flex align-items-center">
+          <div class="col-lg-7 col-md-8 col-sm-6 d-flex align-items-center">
             <div class="text-center w-100">
-              <h3>{{ product.name }}</h3>
+              <p class="pname">{{ product.name }}</p>
               <p class="descriptiobAdmin">{{ product.description }}</p>
             </div>
           </div>
-          <div class="col-3 d-flex align-items-center">
+          <div class="col-lg-3 col-md-12 col-sm-12 d-flex align-items-center">
             <div class="row w-100">
-              <div class="col-6">
+              <div class="col-12">
                 <p class="adminCardInfo">
                   Price: <span>{{ product.price }}</span> EGP
                 </p>
               </div>
               <div
-                class="col-6 d-flex align-items-center justify-content-center"
+                class="col-12 d-flex mybtn align-items-center justify-content-center"
               >
                 <button class="adminButton2" (click)="editProduct(product)">
                   Edit
